--- a/myStyles.css
+++ b/myStyles.css
@@ -1,68 +1,65 @@
 .jumbotron {
-    text-align: center;
+  text-align: center;
 }
 
 .shCart {
-    border: 1px solid rgba(0,0,0,0.2);
-    border-radius: 3px;
-    padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  padding: 10px;
 }
 
 .boxed {
-    width: 80%;
-    margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .flexContainer {
-    display:grid;
-    grid-template-columns: 1fr 3fr;
-    align-items: start;
-    grid-gap: 2%;
-    width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: start;
+  grid-gap: 2%;
+  width: 100%;
 }
 
-.cardContainer{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-auto-flow: row;
-    grid-template-rows: 1fr;
-    grid-gap: 10px;
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-flow: row;
+  grid-template-rows: 1fr;
+  grid-gap: 10px;
 }
 
 .cardData {
-    padding:10px;
+  padding: 10px;
 }
 
-.cardFooter{
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
+.cardFooter {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.cardImage{
-    min-height:150px;
-    background-image: url('https://via.placeholder.com/600x400');
-    background-size: cover;
-    background-position: center center;
+.cardImage {
+  min-height: 150px;
+  background-image: url("https://via.placeholder.com/300x200");
+  background-size: cover;
+  background-position: center center;
 }
 
 .cartTitle {
-    background-color: #2589BD;
-    color: white;
-    font-weight: bold;
-    text-align:center;
-    line-height:3em;
-    margin-bottom: 10px;
+  background-color: #2589bd;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: 3em;
+  margin-bottom: 10px;
 }
 
-
-
-
 .cartProd {
-    display:grid;
-    grid-template-columns: 1fr 8fr;
-    grid-gap: 10px;
-    align-items:center;
-    padding:10px 5px;
-    border: 1px solid rgba(0,0,0,0.1);
-    margin: 5px; 
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+  grid-gap: 10px;
+  align-items: center;
+  padding: 10px 5px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 5px;
 }
